test/compile-fail/resolution/multiple-definition-struct-use-rename/expected.txt
error: the name `a` is defined multiple times
 --> top.rhdl:1:7
  |
1 | struct a {}
  |        ^ previous definition of the type `a` here
5 | use b::c as a;
  |             - `a` redefined here
